--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Diamond SS - Full Stack Developer Portfolio</title>
+    <meta name="description" content="Diamond SS - Full Stack Developer specializing in React, .NET, and modern web technologies. View my portfolio and get in touch!" />
+    <meta name="author" content="Diamond SS" />
+    <meta name="keywords" content="Diamond SS, Full Stack Developer, React, .NET, Portfolio, Web Developer, Frontend, Backend" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Diamond SS - Full Stack Developer Portfolio" />
+    <meta property="og:description" content="Diamond SS - Full Stack Developer specializing in React, .NET, and modern web technologies. View my portfolio and get in touch!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@diamondss_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    
+    <!-- Preconnect to external domains -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
