--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sandro Saralidze - Full Stack Developer Portfolio</title>
-    <meta name="description" content="Sandro Saralidze - Full Stack Developer specializing in React, .NET, and modern web technologies. View my portfolio and get in touch!" />
+    <title>Sandro Saralidze - Frontend Developer Portfolio</title>
+    <meta name="description" content="Sandro Saralidze - Frontend Developer specializing in React, .NET, and modern web technologies. View my portfolio and get in touch!" />
     <meta name="author" content="Sandro Saralidze" />
-    <meta name="keywords" content="Sandro Saralidze, Full Stack Developer, React, .NET, Portfolio, Web Developer, Frontend, Backend" />
+    <meta name="keywords" content="Sandro Saralidze, Frontend Developer, Full Stack Developer, React, .NET, Portfolio, Web Developer, Frontend, Backend" />
 
-    <meta property="og:title" content="Sandro Saralidze Full Stack Developer Portfolio" />
-    <meta property="og:description" content="Sandro Saralidze - Full Stack Developer specializing in React, .NET, and modern web technologies. View my portfolio and get in touch!" />
+    <meta property="og:title" content="Sandro Saralidze Frontend Developer Portfolio" />
+    <meta property="og:description" content="Sandro Saralidze - Frontend Developer specializing in React, .NET, and modern web technologies. View my portfolio and get in touch!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     
